[package]
name = "tx3"
version = "0.0.1"
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "std" ] }
futures = { version = "0.3.21", default-features = false, features = [ "std" ] }
get_if_addrs = { version = "0.5.3", default-features = false }
nanoid = { version = "0.4.0", default-features = false }
once_cell = { version = "1.10.0", default-features = false }
rcgen = { version = "0.9.2", default-features = false, features = [ "pem" ] }
rustls = { version = "0.20.4", default-features = false, features = [ "dangerous_configuration" ] }
serde = { version = "1.0.136", default-features = false, features = [ "std", "derive" ] }
sha2 = { version = "0.10.2", default-features = false, features = [ "std" ] }
tokio = { version = "1.17.0", default-features = false, features = [ "sync", "net" ] }
tokio-rustls = { version = "0.23.3", default-features = false }
url = { version = "2.2.2", default-features = false, features = [ "serde" ] }

[dev-dependencies]
criterion = { version = "0.3.5", features = [ "async_tokio" ] }
parking_lot = "0.12.0"
ring = "0.16.20"
tokio = { version = "1.17.0", features = [ "full" ] }

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[features]
default = []
