[package]
name = "tx3"
version = "0.0.1"
description = "tx3 p2p communications"
license = "Apache-2.0"
homepage = "https://github.com/holochain/tx3"
documentation = "https://docs.rs/tx3"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "tcp", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "std" ] }
clap = { version = "3.1.12", default-features = false, features = [ "std", "derive" ] }
futures = { version = "0.3.21", default-features = false, features = [ "std" ] }
get_if_addrs = { version = "0.5.3", default-features = false }
once_cell = { version = "1.10.0", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
rcgen = { version = "0.9.2", default-features = false, features = [ "pem" ] }
ring = { version = "0.16.20", default-features = false }
rustls = { version = "0.20.4", default-features = false, features = [ "dangerous_configuration" ] }
serde = { version = "1.0.136", default-features = false, features = [ "std", "derive", "rc" ] }
serde_yaml = { version = "0.8.23", default-features = false }
sha2 = { version = "0.10.2", default-features = false, features = [ "std" ] }
socket2 = { version = "0.4.4", default-features = false }
tokio = { version = "1.18.0", default-features = false, features = [ "full" ] }
tokio-rustls = { version = "0.23.3", default-features = false }
tracing = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
url = { version = "2.2.2", default-features = false, features = [ "serde" ] }

[dev-dependencies]
criterion = { version = "0.3.5", features = [ "async_tokio" ] }

[build-dependencies]

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[features]
default = []

[[bin]]
name = "tx3-relay"
path = "src/bin/tx3_relay.rs"

[[bench]]
name = "main"
harness = false
